0.3.0 (2015-11-30):
* Use result instead of rresult

0.2.0 (2015-07-26):
* Use ctypes >= 0.4.0 with stub generation
* Separate modules into Unix-dependent and Unix-independent sets
* Add support for all POSIX 2008 errnos

0.1.0 (2015-07-26):
* Initial public release