@@ -1,8 +1,17 @@
-version = "0.2.0"
+version = "0.3.0"
 description = "Unix errno types, maps, and support"
-requires = "rresult ctypes.stubs unix"
-archive(byte) = "unix_errno.cma"
-archive(bytes, plugin) = "unix_errno.cma"
-archive(native) = "unix_errno.cmxa"
-archive(native, plugin) = "unix_errno.cmxs"
-exists_if = "unix_errno.cma"
+requires = "result bytes"
+archive(byte) = "errno.cma"
+archive(bytes, plugin) = "errno.cma"
+archive(native) = "errno.cmxa"
+archive(native, plugin) = "errno.cmxs"
+exists_if = "errno.cma"
+
+package "unix" (
+  requires = "ctypes.stubs unix"
+  archive(byte) = "unix_errno.cma"
+  archive(bytes, plugin) = "unix_errno.cma"
+  archive(native) = "unix_errno.cmxa"
+  archive(native, plugin) = "unix_errno.cmxs"
+  exists_if = "unix_errno.cma"
+)
