@@ -16,6 +16,13 @@ install: [
 remove: [make "uninstall"]
 depends: [
   "ocamlfind" {build}
-  "ctypes" {>= "0.4.0"}
+  "bytes"
   "result"
+]
+depopts: [
+  "unix"
+  "ctypes"
+]
+conflicts: [
+  "ctypes" {< "0.4.0"}
 ]
