@@ -1,4 +1,3 @@
-Errno
 Errno_unix
 Unix_errno_types
 Unix_errno_types_detected
